--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt": "~0.4.2",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-preprocess": "~4.0.0"
+    "grunt-preprocess": "~4.0.0",
+    "grunt-contrib-coffee": "~0.9.0"
   }
 }
